# paper-palette

./: CHANGELOG.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  REFERENCES.md  palette_ui.py  paper_palette_ui.py  pyproject.toml
.github/workflows/: pages.yml
docs/: PRESET_AUDIT.md  index.html
docs/web/: app.js  styles.css
src/paper_palette/: __init__.py  _color.py  _colorblind.py  _palette.py  _png.py  _presets.py  _ui.py
tests/: test_palette.py  test_web_assets.py
