[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper-palette"
version = "1.2.0"
description = "Publication-ready and colorblind-aware palette generation with perceptual color spaces."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hoyeon Cho" }
]
keywords = ["accessibility", "color", "colorblind", "palette", "paper", "oklab", "oklch", "visualization", "tkinter"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.24"
]

[project.urls]
Repository = "https://github.com/SemanticWave-Hoyeon/paper-palette"
Issues = "https://github.com/SemanticWave-Hoyeon/paper-palette/issues"

[project.scripts]
paper-palette-ui = "paper_palette._ui:main"

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
